--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ window.onload = function() {
 
 	//	Add the States your game has.
 	//	You don't have to do this in the html, it could be done in your Boot state too, but for simplicity I'll keep it here.
-	game.state.add('Boot', RunSanta.Boot);
-	game.state.add('Preloader', RunSanta.Preloader);
-	game.state.add('MainMenu', RunSanta.MainMenu);
-	game.state.add('Game', RunSanta.Game);
+	game.state.add('Boot', Blobb.Boot);
+	game.state.add('Preloader', Blobb.Preloader);
+	game.state.add('MainMenu', Blobb.MainMenu);
+	game.state.add('Game', Blobb.Game);
 
 	//	Now start the Boot state.
 	game.state.start('Boot');
