--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 <script type="text/javascript">
 
 window.onload = function() {
-
 	//	100% of the browser window - see Boot.js for additional configuration
-	var game = new Phaser.Game(320, 480, Phaser.AUTO, '');
+	var gameMode = Phaser.Device.cocoonJS ? Phaser.CANVAS : Phaser.AUTO;
+	
+	var game = new Phaser.Game(320, 480, Phaser.CANVAS, '');
 
 	//	Add the States your game has.
-	//	You don't have to do this in the html, it could be done in your Boot state too, but for simplicity I'll keep it here.
 	game.state.add('Boot', Blobb.Boot);
 	game.state.add('Preloader', Blobb.Preloader);
 	game.state.add('MainMenu', Blobb.MainMenu);
@@ -33,7 +33,6 @@ window.onload = function() {
 
 	//	Now start the Boot state.
 	game.state.start('Boot');
-
 };
 
 </script>
