--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
 		@font-face {
 			font-family: 'kenneyspace';
-			src: url('fonts/kenvector_future_thin.ttf');
+			src: url('fonts/kenvector_future_thin.ttf') format('truetype');
 		}
 
 		body {
