--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Phaser Responsive Project Template</title>
+	<script src="cocoon.min.js"></script>
 	<script src="phaser.dev.js"></script>
 	<script src="Boot.js"></script>
 	<script src="Preloader.js"></script>
 	<script src="MainMenu.js"></script>
 	<script src="Game.js"></script>
     <style>
-		@font-face {
-			font-family: 'kenneyspace';
-			src: url('fonts/kenvector_future_thin.ttf') format('truetype');
-		}
 
 		body {
             margin: 0;
@@ -25,7 +22,68 @@
 
 <script type="text/javascript">
 
-window.onload = function() {
+(function (cocoonjsphaser) {
+
+	cocoonjsphaser.utils = {
+		fixDOMParser: function () {
+			window.DOMParser = DOMishParser;
+		}
+	};
+
+	function DOMishParser() { }
+	DOMishParser.prototype.parseFromString = function (data) {
+		return new DOMishObject(JSON.parse(data));
+	};
+
+	function DOMishAttributes() { }
+	DOMishAttributes.prototype.getNamedItem = function (name) {
+		return {
+			nodeValue: this[name] || null
+		};
+	};
+
+	function makeDOMishObject(data) {
+		return new DOMishObject(data);
+	}
+
+	function DOMishObject(data) {
+		this.attributes = this.convertContent(data);
+		this.length = Object.keys(this.attributes).length;
+	}
+	DOMishObject.prototype.documentElement = document;
+	DOMishObject.prototype.convertContent = function (obj) {
+		var attributes = new DOMishAttributes(),
+			prop;
+
+		for (prop in obj) {
+			if (obj[prop] !== null && typeof obj[prop] === 'object') {
+				attributes[prop] = Array.isArray(obj[prop]) ?
+					obj[prop].map(makeDOMishObject) : new DOMishObject(obj[prop]);
+			} else {
+				attributes[prop] = obj[prop];
+			}
+		}
+
+		return attributes;
+	};
+	DOMishObject.prototype.getElementsByTagName = function (name) {
+		return this.attributes[name] ?
+			Array.isArray(this.attributes[name]) ?
+			this.attributes[name] : [this.attributes[name]] : [];
+	};
+
+	DOMishObject.prototype.getAttribute = function (name) {
+		return this.attributes.getNamedItem(name).nodeValue;
+	};
+
+}(window.cocoonjsphaser = window.cocoonjsphaser || {}));
+
+(function() {
+	console.log(navigator.isCocoonJS);
+	if (navigator.isCocoonJS) {
+		cocoonjsphaser.utils.fixDOMParser();
+	}
+
 	//	100% of the browser window - see Boot.js for additional configuration
 	var gameMode = Phaser.Device.cocoonJS ? Phaser.CANVAS : Phaser.AUTO;
 
@@ -39,7 +97,7 @@ window.onload = function() {
 
 	//	Now start the Boot state.
 	game.state.start('Boot');
-};
+})();
 
 </script>
 
