--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 	//	100% of the browser window - see Boot.js for additional configuration
 	var gameMode = Phaser.Device.cocoonJS ? Phaser.CANVAS : Phaser.AUTO;
-	var SAFE_ZONE_WIDTH = 320;
-	var SAFE_ZONE_HEIGHT = 480;
+	var SAFE_ZONE_WIDTH = window.innerWidth;// * window.devicePixelRatio;
+	var SAFE_ZONE_HEIGHT = window.innerHeight;// * window.devicePixelRatio;
 	var game = new Phaser.Game(SAFE_ZONE_WIDTH, SAFE_ZONE_HEIGHT, Phaser.CANVAS, '');
 
 	//	Add the States your game has.
@@ -97,7 +97,7 @@
 	game.state.add('Preloader', Blobb.Preloader);
 	game.state.add('MainMenu', Blobb.MainMenu);
 	game.state.add('Game', Blobb.Game);
-
+console.log()
 	//	Now start the Boot state.
 	game.state.start('Boot');
 })();
