--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 		body {
             margin: 0;
             padding: 0;
-			background-color: #fff;
+			background-color: #333;
         }
     </style>
 	<meta name="viewport"
 		content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 </head>
-<body style="background-color: #333;">
+<body>
 
 <script type="text/javascript">
 
